// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should import line breaks without creating a leading space 1`] = `
[
  {
    "characterList": [
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
    ],
    "data": {},
    "depth": 0,
    "key": "key0",
    "text": "Line 1
    Line 2
    Line 3",
    "type": "unstyled",
  },
]
`;

exports[`Should import recognised draft li depths when nesting disabled 1`] = `
[
  {
    "characterList": [
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
    ],
    "data": {},
    "depth": 0,
    "key": "key0",
    "text": "depth0",
    "type": "unordered-list-item",
  },
  {
    "characterList": [
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
    ],
    "data": {},
    "depth": 1,
    "key": "key1",
    "text": "depth1",
    "type": "unordered-list-item",
  },
  {
    "characterList": [
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
    ],
    "data": {},
    "depth": 2,
    "key": "key2",
    "text": "depth2",
    "type": "unordered-list-item",
  },
  {
    "characterList": [
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
    ],
    "data": {},
    "depth": 3,
    "key": "key3",
    "text": "depth3",
    "type": "unordered-list-item",
  },
  {
    "characterList": [
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
    ],
    "data": {},
    "depth": 4,
    "key": "key4",
    "text": "depth4",
    "type": "unordered-list-item",
  },
]
`;

exports[`Should import two blockquotes without extra line breaks 1`] = `
[
  {
    "characterList": [
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
    ],
    "data": {},
    "depth": 0,
    "key": "key0",
    "text": "First",
    "type": "blockquote",
  },
  {
    "characterList": [
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
    ],
    "data": {},
    "depth": 0,
    "key": "key2",
    "text": "Second",
    "type": "blockquote",
  },
]
`;

exports[`Should not create empty container blocks around ol and their list items 1`] = `
[
  {
    "characterList": [
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
    ],
    "data": {},
    "depth": 0,
    "key": "key0",
    "text": "something",
    "type": "ordered-list-item",
  },
]
`;

exports[`Should not create empty container blocks around ul and their list items 1`] = `
[
  {
    "characterList": [
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
    ],
    "data": {},
    "depth": 0,
    "key": "key0",
    "text": "something",
    "type": "unordered-list-item",
  },
]
`;

exports[`Should not create empty container blocks around ul and their list items when nesting enabled 1`] = `
Array [
  Object {
    "characterList": Array [
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
    ],
    "children": Array [],
    "data": Object {},
    "depth": 0,
    "key": "key0",
    "nextSibling": null,
    "parent": null,
    "prevSibling": null,
    "text": "something",
    "type": "unordered-list-item",
  },
]
`;

exports[`Should preserve entities for whitespace-only content 1`] = `
[
  {
    "characterList": [
      {
        "entity": "1",
        "style": [],
      },
      {
        "entity": "1",
        "style": [
          "BOLD",
        ],
      },
      {
        "entity": "1",
        "style": [
          "BOLD",
        ],
      },
      {
        "entity": "1",
        "style": [
          "BOLD",
        ],
      },
      {
        "entity": "1",
        "style": [
          "BOLD",
        ],
      },
      {
        "entity": "1",
        "style": [
          "BOLD",
        ],
      },
      {
        "entity": "1",
        "style": [
          "BOLD",
        ],
      },
      {
        "entity": "1",
        "style": [],
      },
      {
        "entity": "1",
        "style": [
          "BOLD",
        ],
      },
      {
        "entity": "1",
        "style": [
          "BOLD",
        ],
      },
      {
        "entity": "1",
        "style": [
          "BOLD",
        ],
      },
      {
        "entity": "1",
        "style": [
          "BOLD",
        ],
      },
      {
        "entity": "1",
        "style": [
          "BOLD",
        ],
      },
      {
        "entity": "1",
        "style": [],
      },
    ],
    "data": {},
    "depth": 0,
    "key": "key0",
    "text": " before after ",
    "type": "unstyled",
  },
]
`;

exports[`Should properly handle nested attribute styles 1`] = `
[
  {
    "characterList": [
      {
        "entity": null,
        "style": [
          "BOLD",
        ],
      },
      {
        "entity": null,
        "style": [
          "BOLD",
        ],
      },
      {
        "entity": null,
        "style": [
          "BOLD",
        ],
      },
      {
        "entity": null,
        "style": [
          "BOLD",
        ],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [
          "BOLD",
        ],
      },
      {
        "entity": null,
        "style": [
          "BOLD",
        ],
      },
      {
        "entity": null,
        "style": [
          "BOLD",
        ],
      },
      {
        "entity": null,
        "style": [
          "BOLD",
        ],
      },
      {
        "entity": null,
        "style": [
          "BOLD",
        ],
      },
      {
        "entity": null,
        "style": [
          "BOLD",
        ],
      },
      {
        "entity": null,
        "style": [
          "BOLD",
        ],
      },
      {
        "entity": null,
        "style": [
          "BOLD",
        ],
      },
      {
        "entity": null,
        "style": [
          "BOLD",
        ],
      },
      {
        "entity": null,
        "style": [
          "BOLD",
        ],
      },
    ],
    "data": {},
    "depth": 0,
    "key": "key0",
    "text": "boldnot boldbold again",
    "type": "unstyled",
  },
]
`;

exports[`Should recognize preformatted blocks 1`] = `
[
  {
    "characterList": [
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [
          "CODE",
        ],
      },
      {
        "entity": null,
        "style": [
          "CODE",
        ],
      },
      {
        "entity": null,
        "style": [
          "CODE",
        ],
      },
      {
        "entity": null,
        "style": [
          "CODE",
        ],
      },
      {
        "entity": null,
        "style": [
          "CODE",
        ],
      },
      {
        "entity": null,
        "style": [
          "CODE",
        ],
      },
      {
        "entity": null,
        "style": [
          "CODE",
        ],
      },
      {
        "entity": null,
        "style": [
          "CODE",
        ],
      },
      {
        "entity": null,
        "style": [
          "CODE",
        ],
      },
      {
        "entity": null,
        "style": [
          "CODE",
        ],
      },
      {
        "entity": null,
        "style": [
          "CODE",
        ],
      },
      {
        "entity": null,
        "style": [
          "CODE",
        ],
      },
      {
        "entity": null,
        "style": [
          "CODE",
        ],
      },
      {
        "entity": null,
        "style": [
          "CODE",
        ],
      },
      {
        "entity": null,
        "style": [
          "CODE",
        ],
      },
    ],
    "data": {},
    "depth": 0,
    "key": "key0",
    "text": "following some pre some_code_stuff",
    "type": "unstyled",
  },
]
`;

exports[`Should recognize preformatted blocks mixed other styles 1`] = `
[
  {
    "characterList": [
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [
          "BOLD",
          "CODE",
        ],
      },
      {
        "entity": null,
        "style": [
          "BOLD",
          "CODE",
        ],
      },
      {
        "entity": null,
        "style": [
          "BOLD",
          "CODE",
        ],
      },
      {
        "entity": null,
        "style": [
          "BOLD",
          "CODE",
        ],
      },
      {
        "entity": null,
        "style": [
          "CODE",
        ],
      },
      {
        "entity": null,
        "style": [
          "CODE",
        ],
      },
      {
        "entity": null,
        "style": [
          "CODE",
        ],
      },
      {
        "entity": null,
        "style": [
          "CODE",
        ],
      },
      {
        "entity": null,
        "style": [
          "CODE",
        ],
      },
      {
        "entity": null,
        "style": [
          "CODE",
        ],
      },
      {
        "entity": null,
        "style": [
          "CODE",
        ],
      },
      {
        "entity": null,
        "style": [
          "CODE",
        ],
      },
      {
        "entity": null,
        "style": [
          "CODE",
        ],
      },
    ],
    "data": {},
    "depth": 0,
    "key": "key0",
    "text": "example bold and code",
    "type": "unstyled",
  },
]
`;

exports[`Should recognized and override html structure when having known draft-js classname with nesting disabled 1`] = `
[
  {
    "characterList": [
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
    ],
    "data": {},
    "depth": 0,
    "key": "key0",
    "text": "depth0",
    "type": "unordered-list-item",
  },
  {
    "characterList": [
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
    ],
    "data": {},
    "depth": 1,
    "key": "key1",
    "text": "depth1",
    "type": "unordered-list-item",
  },
  {
    "characterList": [
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
    ],
    "data": {},
    "depth": 2,
    "key": "key2",
    "text": "depth2",
    "type": "unordered-list-item",
  },
  {
    "characterList": [
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
    ],
    "data": {},
    "depth": 3,
    "key": "key3",
    "text": "depth3",
    "type": "unordered-list-item",
  },
]
`;

exports[`Should recognized list deep nesting 1`] = `
[
  {
    "characterList": [
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
    ],
    "data": {},
    "depth": 0,
    "key": "key0",
    "text": "depth0-0",
    "type": "unordered-list-item",
  },
  {
    "characterList": [
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
    ],
    "data": {},
    "depth": 0,
    "key": "key1",
    "text": "depth0-1",
    "type": "unordered-list-item",
  },
  {
    "characterList": [
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
    ],
    "data": {},
    "depth": 1,
    "key": "key2",
    "text": "depth1-0",
    "type": "unordered-list-item",
  },
  {
    "characterList": [
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
    ],
    "data": {},
    "depth": 1,
    "key": "key3",
    "text": "depth1-1",
    "type": "ordered-list-item",
  },
  {
    "characterList": [
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
    ],
    "data": {},
    "depth": 2,
    "key": "key4",
    "text": "depth2-0",
    "type": "unordered-list-item",
  },
  {
    "characterList": [
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
    ],
    "data": {},
    "depth": 2,
    "key": "key5",
    "text": "depth2-1",
    "type": "unordered-list-item",
  },
  {
    "characterList": [
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
    ],
    "data": {},
    "depth": 0,
    "key": "key6",
    "text": "depth0-2",
    "type": "unordered-list-item",
  },
  {
    "characterList": [
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
    ],
    "data": {},
    "depth": 0,
    "key": "key7",
    "text": "depth0-3",
    "type": "ordered-list-item",
  },
]
`;

exports[`does not convert deeply nested html blocks 1`] = `
[
  {
    "characterList": [
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
    ],
    "data": {},
    "depth": 0,
    "key": "key0",
    "text": "Some quote",
    "type": "ordered-list-item",
  },
  {
    "characterList": [
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
    ],
    "data": {},
    "depth": 0,
    "key": "key1",
    "text": "Hello World!
lorem ipsum",
    "type": "ordered-list-item",
  },
]
`;

exports[`eliminates useless blocks 1`] = `
[
  {
    "characterList": [
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
    ],
    "data": {},
    "depth": 0,
    "key": "key2",
    "text": "Hello",
    "type": "unstyled",
  },
  {
    "characterList": [
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
    ],
    "data": {},
    "depth": 0,
    "key": "key3",
    "text": "World",
    "type": "unstyled",
  },
]
`;

exports[`highlighted text should be recognized and considered styled characters 1`] = `
[
  {
    "characterList": [
      {
        "entity": null,
        "style": Set {
          "HIGHLIGHT",
        },
      },
      {
        "entity": null,
        "style": Set {
          "HIGHLIGHT",
        },
      },
      {
        "entity": null,
        "style": Set {
          "HIGHLIGHT",
        },
      },
      {
        "entity": null,
        "style": Set {
          "HIGHLIGHT",
        },
      },
    ],
    "data": {},
    "depth": 0,
    "key": "key0",
    "text": "test",
    "type": "unstyled",
  },
]
`;

exports[`img with data protocol should be correctly parsed 1`] = `"\\ud83d\\udcf7"`;

exports[`img with http protocol should have camera emoji content 1`] = `"\\ud83d\\udcf7"`;

exports[`img with https protocol should have camera emoji content 1`] = `"\\ud83d\\udcf7"`;

exports[`img with role presentation should not be rendered 1`] = `[]`;

exports[`line break should be correctly parsed - multiple <br> in a content block 1`] = `
[
  {
    "characterList": [
      {
        "entity": null,
        "style": [
          "BOLD",
        ],
      },
      {
        "entity": null,
        "style": [
          "BOLD",
        ],
      },
      {
        "entity": null,
        "style": [
          "BOLD",
        ],
      },
      {
        "entity": null,
        "style": [
          "BOLD",
        ],
      },
      {
        "entity": null,
        "style": [
          "BOLD",
        ],
      },
      {
        "entity": null,
        "style": [
          "BOLD",
        ],
      },
      {
        "entity": null,
        "style": [
          "BOLD",
        ],
      },
      {
        "entity": null,
        "style": [
          "BOLD",
        ],
      },
      {
        "entity": null,
        "style": [
          "BOLD",
        ],
      },
      {
        "entity": null,
        "style": [
          "BOLD",
        ],
      },
      {
        "entity": null,
        "style": [
          "BOLD",
        ],
      },
      {
        "entity": null,
        "style": [
          "BOLD",
        ],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
    ],
    "data": {},
    "depth": 0,
    "key": "key0",
    "text": "Hello World! 
 
      lorem ipsum",
    "type": "unstyled",
  },
]
`;

exports[`line break should be correctly parsed - single <br> 1`] = `
[
  {
    "characterList": [
      {
        "entity": null,
        "style": [
          "BOLD",
        ],
      },
      {
        "entity": null,
        "style": [
          "BOLD",
        ],
      },
      {
        "entity": null,
        "style": [
          "BOLD",
        ],
      },
      {
        "entity": null,
        "style": [
          "BOLD",
        ],
      },
      {
        "entity": null,
        "style": [
          "BOLD",
        ],
      },
      {
        "entity": null,
        "style": [
          "BOLD",
        ],
      },
      {
        "entity": null,
        "style": [
          "BOLD",
        ],
      },
      {
        "entity": null,
        "style": [
          "BOLD",
        ],
      },
      {
        "entity": null,
        "style": [
          "BOLD",
        ],
      },
      {
        "entity": null,
        "style": [
          "BOLD",
        ],
      },
      {
        "entity": null,
        "style": [
          "BOLD",
        ],
      },
      {
        "entity": null,
        "style": [
          "BOLD",
        ],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
    ],
    "data": {},
    "depth": 0,
    "key": "key0",
    "text": "Hello World! 
      lorem ipsum",
    "type": "unstyled",
  },
]
`;

exports[`must not merge tags when converting adjacent <blockquote /> 1`] = `
[
  {
    "characterList": [
      {
        "entity": null,
        "style": [],
      },
    ],
    "data": {},
    "depth": 0,
    "key": "key0",
    "text": "a",
    "type": "blockquote",
  },
  {
    "characterList": [
      {
        "entity": null,
        "style": [],
      },
    ],
    "data": {},
    "depth": 0,
    "key": "key1",
    "text": "b",
    "type": "blockquote",
  },
]
`;

exports[`must not merge tags when converting adjacent <blockquote /> 2`] = `
[
  {
    "characterList": [
      {
        "entity": null,
        "style": [],
      },
    ],
    "data": {},
    "depth": 0,
    "key": "key0",
    "text": "a",
    "type": "blockquote",
  },
  {
    "characterList": [
      {
        "entity": null,
        "style": [],
      },
    ],
    "data": {},
    "depth": 0,
    "key": "key1",
    "text": "b",
    "type": "blockquote",
  },
]
`;

exports[`must not merge tags when converting adjacent <div /> 1`] = `
[
  {
    "characterList": [
      {
        "entity": null,
        "style": [],
      },
    ],
    "data": {},
    "depth": 0,
    "key": "key0",
    "text": "a",
    "type": "unstyled",
  },
  {
    "characterList": [
      {
        "entity": null,
        "style": [],
      },
    ],
    "data": {},
    "depth": 0,
    "key": "key1",
    "text": "b",
    "type": "unstyled",
  },
]
`;

exports[`must not merge tags when converting adjacent <div /> 2`] = `
[
  {
    "characterList": [
      {
        "entity": null,
        "style": [],
      },
    ],
    "data": {},
    "depth": 0,
    "key": "key0",
    "text": "a",
    "type": "unstyled",
  },
  {
    "characterList": [
      {
        "entity": null,
        "style": [],
      },
    ],
    "data": {},
    "depth": 0,
    "key": "key1",
    "text": "b",
    "type": "unstyled",
  },
]
`;

exports[`must not merge tags when converting adjacent <figure /> 1`] = `
[
  {
    "characterList": [
      {
        "entity": null,
        "style": [],
      },
    ],
    "data": {},
    "depth": 0,
    "key": "key0",
    "text": "a",
    "type": "atomic",
  },
  {
    "characterList": [
      {
        "entity": null,
        "style": [],
      },
    ],
    "data": {},
    "depth": 0,
    "key": "key1",
    "text": "b",
    "type": "atomic",
  },
]
`;

exports[`must not merge tags when converting adjacent <figure /> 2`] = `
[
  {
    "characterList": [
      {
        "entity": null,
        "style": [],
      },
    ],
    "data": {},
    "depth": 0,
    "key": "key0",
    "text": "a",
    "type": "atomic",
  },
  {
    "characterList": [
      {
        "entity": null,
        "style": [],
      },
    ],
    "data": {},
    "depth": 0,
    "key": "key1",
    "text": "b",
    "type": "atomic",
  },
]
`;

exports[`must not merge tags when converting adjacent <h1 /> 1`] = `
[
  {
    "characterList": [
      {
        "entity": null,
        "style": [],
      },
    ],
    "data": {},
    "depth": 0,
    "key": "key0",
    "text": "a",
    "type": "header-one",
  },
  {
    "characterList": [
      {
        "entity": null,
        "style": [],
      },
    ],
    "data": {},
    "depth": 0,
    "key": "key1",
    "text": "b",
    "type": "header-one",
  },
]
`;

exports[`must not merge tags when converting adjacent <h1 /> 2`] = `
[
  {
    "characterList": [
      {
        "entity": null,
        "style": [],
      },
    ],
    "data": {},
    "depth": 0,
    "key": "key0",
    "text": "a",
    "type": "header-one",
  },
  {
    "characterList": [
      {
        "entity": null,
        "style": [],
      },
    ],
    "data": {},
    "depth": 0,
    "key": "key1",
    "text": "b",
    "type": "header-one",
  },
]
`;

exports[`must not merge tags when converting adjacent <h2 /> 1`] = `
[
  {
    "characterList": [
      {
        "entity": null,
        "style": [],
      },
    ],
    "data": {},
    "depth": 0,
    "key": "key0",
    "text": "a",
    "type": "header-two",
  },
  {
    "characterList": [
      {
        "entity": null,
        "style": [],
      },
    ],
    "data": {},
    "depth": 0,
    "key": "key1",
    "text": "b",
    "type": "header-two",
  },
]
`;

exports[`must not merge tags when converting adjacent <h2 /> 2`] = `
[
  {
    "characterList": [
      {
        "entity": null,
        "style": [],
      },
    ],
    "data": {},
    "depth": 0,
    "key": "key0",
    "text": "a",
    "type": "header-two",
  },
  {
    "characterList": [
      {
        "entity": null,
        "style": [],
      },
    ],
    "data": {},
    "depth": 0,
    "key": "key1",
    "text": "b",
    "type": "header-two",
  },
]
`;

exports[`must not merge tags when converting adjacent <h3 /> 1`] = `
[
  {
    "characterList": [
      {
        "entity": null,
        "style": [],
      },
    ],
    "data": {},
    "depth": 0,
    "key": "key0",
    "text": "a",
    "type": "header-three",
  },
  {
    "characterList": [
      {
        "entity": null,
        "style": [],
      },
    ],
    "data": {},
    "depth": 0,
    "key": "key1",
    "text": "b",
    "type": "header-three",
  },
]
`;

exports[`must not merge tags when converting adjacent <h3 /> 2`] = `
[
  {
    "characterList": [
      {
        "entity": null,
        "style": [],
      },
    ],
    "data": {},
    "depth": 0,
    "key": "key0",
    "text": "a",
    "type": "header-three",
  },
  {
    "characterList": [
      {
        "entity": null,
        "style": [],
      },
    ],
    "data": {},
    "depth": 0,
    "key": "key1",
    "text": "b",
    "type": "header-three",
  },
]
`;

exports[`must not merge tags when converting adjacent <h4 /> 1`] = `
[
  {
    "characterList": [
      {
        "entity": null,
        "style": [],
      },
    ],
    "data": {},
    "depth": 0,
    "key": "key0",
    "text": "a",
    "type": "header-four",
  },
  {
    "characterList": [
      {
        "entity": null,
        "style": [],
      },
    ],
    "data": {},
    "depth": 0,
    "key": "key1",
    "text": "b",
    "type": "header-four",
  },
]
`;

exports[`must not merge tags when converting adjacent <h4 /> 2`] = `
[
  {
    "characterList": [
      {
        "entity": null,
        "style": [],
      },
    ],
    "data": {},
    "depth": 0,
    "key": "key0",
    "text": "a",
    "type": "header-four",
  },
  {
    "characterList": [
      {
        "entity": null,
        "style": [],
      },
    ],
    "data": {},
    "depth": 0,
    "key": "key1",
    "text": "b",
    "type": "header-four",
  },
]
`;

exports[`must not merge tags when converting adjacent <h5 /> 1`] = `
[
  {
    "characterList": [
      {
        "entity": null,
        "style": [],
      },
    ],
    "data": {},
    "depth": 0,
    "key": "key0",
    "text": "a",
    "type": "header-five",
  },
  {
    "characterList": [
      {
        "entity": null,
        "style": [],
      },
    ],
    "data": {},
    "depth": 0,
    "key": "key1",
    "text": "b",
    "type": "header-five",
  },
]
`;

exports[`must not merge tags when converting adjacent <h5 /> 2`] = `
[
  {
    "characterList": [
      {
        "entity": null,
        "style": [],
      },
    ],
    "data": {},
    "depth": 0,
    "key": "key0",
    "text": "a",
    "type": "header-five",
  },
  {
    "characterList": [
      {
        "entity": null,
        "style": [],
      },
    ],
    "data": {},
    "depth": 0,
    "key": "key1",
    "text": "b",
    "type": "header-five",
  },
]
`;

exports[`must not merge tags when converting adjacent <h6 /> 1`] = `
[
  {
    "characterList": [
      {
        "entity": null,
        "style": [],
      },
    ],
    "data": {},
    "depth": 0,
    "key": "key0",
    "text": "a",
    "type": "header-six",
  },
  {
    "characterList": [
      {
        "entity": null,
        "style": [],
      },
    ],
    "data": {},
    "depth": 0,
    "key": "key1",
    "text": "b",
    "type": "header-six",
  },
]
`;

exports[`must not merge tags when converting adjacent <h6 /> 2`] = `
[
  {
    "characterList": [
      {
        "entity": null,
        "style": [],
      },
    ],
    "data": {},
    "depth": 0,
    "key": "key0",
    "text": "a",
    "type": "header-six",
  },
  {
    "characterList": [
      {
        "entity": null,
        "style": [],
      },
    ],
    "data": {},
    "depth": 0,
    "key": "key1",
    "text": "b",
    "type": "header-six",
  },
]
`;

exports[`must not merge tags when converting adjacent <li /> 1`] = `
[
  {
    "characterList": [
      {
        "entity": null,
        "style": [],
      },
    ],
    "data": {},
    "depth": 0,
    "key": "key0",
    "text": "a",
    "type": "unordered-list-item",
  },
  {
    "characterList": [
      {
        "entity": null,
        "style": [],
      },
    ],
    "data": {},
    "depth": 0,
    "key": "key1",
    "text": "b",
    "type": "unordered-list-item",
  },
]
`;

exports[`must not merge tags when converting adjacent <li /> 2`] = `
[
  {
    "characterList": [
      {
        "entity": null,
        "style": [],
      },
    ],
    "data": {},
    "depth": 0,
    "key": "key0",
    "text": "a",
    "type": "unordered-list-item",
  },
  {
    "characterList": [
      {
        "entity": null,
        "style": [],
      },
    ],
    "data": {},
    "depth": 0,
    "key": "key1",
    "text": "b",
    "type": "unordered-list-item",
  },
]
`;

exports[`must not merge tags when converting adjacent <p /> 1`] = `
[
  {
    "characterList": [
      {
        "entity": null,
        "style": [],
      },
    ],
    "data": {},
    "depth": 0,
    "key": "key0",
    "text": "a",
    "type": "unstyled",
  },
  {
    "characterList": [
      {
        "entity": null,
        "style": [],
      },
    ],
    "data": {},
    "depth": 0,
    "key": "key1",
    "text": "b",
    "type": "unstyled",
  },
]
`;

exports[`must not merge tags when converting adjacent <p /> 2`] = `
[
  {
    "characterList": [
      {
        "entity": null,
        "style": [],
      },
    ],
    "data": {},
    "depth": 0,
    "key": "key0",
    "text": "a",
    "type": "unstyled",
  },
  {
    "characterList": [
      {
        "entity": null,
        "style": [],
      },
    ],
    "data": {},
    "depth": 0,
    "key": "key1",
    "text": "b",
    "type": "unstyled",
  },
]
`;

exports[`must not merge tags when converting adjacent <pre /> 1`] = `
[
  {
    "characterList": [
      {
        "entity": null,
        "style": [],
      },
    ],
    "data": {},
    "depth": 0,
    "key": "key0",
    "text": "a",
    "type": "code-block",
  },
  {
    "characterList": [
      {
        "entity": null,
        "style": [],
      },
    ],
    "data": {},
    "depth": 0,
    "key": "key1",
    "text": "b",
    "type": "code-block",
  },
]
`;

exports[`must not merge tags when converting adjacent <pre /> 2`] = `
[
  {
    "characterList": [
      {
        "entity": null,
        "style": [],
      },
    ],
    "data": {},
    "depth": 0,
    "key": "key0",
    "text": "a",
    "type": "code-block",
  },
  {
    "characterList": [
      {
        "entity": null,
        "style": [],
      },
    ],
    "data": {},
    "depth": 0,
    "key": "key1",
    "text": "b",
    "type": "code-block",
  },
]
`;
